# esp-idf-learning

Project/html/: webserver.html
Project/main/: CMakeLists.txt  app_http_server.c  app_http_server.h  app_main.c  rgb_led.h
ScalableServer/: ScalableEchoServer.cpp  resolve.cpp  resolve.h
T4_softAp/: CMakeLists.txt  README.md  sdkconfig
T4_softAp/html/: backup  web.html
T4_softAp/main/: CMakeLists.txt  app_flash.c  app_flash.h  app_http_server.c  app_http_server.h  app_main.c  app_mqtt.c  app_mqtt.h  component.mk
auto/main/: app_main.c
gatt_server/: sdkconfig  sdkconfig.old
gatt_server/main/: app_main.c  ble_gatt_server.c  ble_gatt_server.h
host_blemesh/: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
host_blemesh/common/ncp_host/: CMakeLists.txt  btmesh_conf.c  btmesh_conf_distributor.c  btmesh_conf_job.c  btmesh_prov.c  ncp_host_nothread.c  sl_bt_ncp_host.c  sl_btmesh.c  sl_btmesh_ncp_host_api.c  sl_status.c  sl_string.c  sl_string.h  sli_btmesh_api.h  system.c
host_blemesh/common/ncp_host/app_log/: app_log.c  app_log.h
host_blemesh/common/ncp_host/app_log/config/: app_log_config.h
host_blemesh/common/ncp_host/simple_timer/: sl_simple_timer.c  sl_simple_timer.h
host_blemesh/esp_host_blemesh/: README.md
host_blemesh/main/: CMakeLists.txt  app.c  app.h  app_conf.c  app_main.c  component.mk  ncp_host_nothread.c
i2c_self_test/main/: CMakeLists.txt  (+3 more)
led_mqtt/: CMakeLists.txt  README.md  sdkconfig
ssl_mutual_auth/: CMakeLists.txt  sdkconfig
test/: sdkconfig  sdkconfig.old
wifi_station/: sdkconfig  sdkconfig.old
(+30 files in other folders)
